--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "vitest"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
@@ -30,6 +30,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
-    "vite": "^6.3.1"
+    "jsdom": "^26.1.0",
+    "vite": "^6.3.1",
+    "vitest": "^3.1.3"
   }
 }
